<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/operation_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_marginBottom="2dp"
            android:background="@drawable/button_background"
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:background="@drawable/button_background"
            android:id="@+id/sub_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub" />

        <Button
            android:layout_marginTop="2dp"
            android:background="@drawable/button_background"
            android:id="@+id/mul_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mul" />

        <Button
            android:layout_marginTop="2dp"
            android:background="@drawable/button_background"
            android:id="@+id/div_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:background="@drawable/button_background"
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

    </LinearLayout>
</FrameLayout>